welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: Unit does not take parameters
	    growFlowers();
                       ^